app-be-dev/dc-app-be.yml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: app-be
  namespace: app-be-dev
  labels:
    app: app-be
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: app-be
    deploymentconfig: app-be
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-be
        deploymentconfig: app-be
    spec:
      containers:
        - name: app-be
          image: 'image-registry.openshift-image-registry.svc:5000/app-be-dev/app-be:dev'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
            - containerPort: 9779
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
