app-be-dev/svc-app-be.yml
kind: Service
apiVersion: v1
metadata:
  name: app-be
  namespace: app-be-dev
  labels:
    app: app-be
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
    - name: 9779-tcp
      protocol: TCP
      port: 9779
      targetPort: 9779
  selector:
    app: app-be
    deploymentconfig: app-be
  type: ClusterIP
  sessionAffinity: None
